# oneoff-docker-runner

./: Dockerfile  Makefile  README.md  demo_integrated.py  example_client.py  healthcheck.py  main.py  mcp.py  pyproject.toml  requirements.txt  start.sh
.cursor/rules/: project.mdc
.github/workflows/: docker-publish.yml  python-app.yml
tests/: test_mcp_server.py  test_run_container.py
