[project]
name = "oneoff-docker-runner"
version = "0.1.3-beta1"
description = "A Docker container runner with MCP (Model Context Protocol) support"
authors = [
    {name = "tumf", email = "tumf@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.10.6",
    "uvicorn>=0.35.0",
    "docker>=7.1.0",
    "requests>=2.32.3",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
docker-runner = "main:main"
docker-runner-demo = "demo_integrated:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "black",
    "isort",
    "mypy",
    "types-docker>=7.1.0.20250705",
    "types-requests>=2.32.4.20250611",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "0.1.3-beta1"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true 
